<resources>
    <string name="app_name">Cello Coach</string>
    <string name="title_activity_precise_pitch_home">Tuner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fingerboard_heat_map">Fingerboard Heat Map</string>
    <string name="practice_note_sequences">Practice Note Sequences</string>
    <string name="pitch_competition">Game of Pitches</string>
    <string name="title_activity_car_race_animation">CarRaceAnimation</string>
    <string name="title_activity_scores">Score History</string>
    <string name="title_activity_wizard">Wizard</string>
    <string name="intro_slide_one_title">Welcome</string>
    <string name="intro_slide_one_description">Hello, Cello Student! Are you ready to learn ?</string>
    <string name="intro_slide_two_title">What is your name ?</string>
    <string name="intro_slide_two_description">To personalize your experience, add your name</string>
    <string name="intro_slide_two_btn">Set name</string>
    <string name="intro_slide_two_dialog_user">Your name ?</string>
    <string name="intro_slide_three_title">Level</string>
    <string name="intro_slide_three_description">Choose your skill level</string>
    <string name="intro_slide_three_btn">Set level</string>
    <string name="intro_slide_three_dialog_user">Your level ?</string>
    <string name="intro_slide_for_title">Well done</string>
    <string name="intro_slide_for_description">You are ready to learn !</string>
    <string-array name="intro_array_level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string-array name="intro_array_level_values_ranges">
        <item>24-12</item>
        <item>11.9-8</item>
        <item>7.9-6</item>
        <item>5.9-0</item>
    </string-array>
    <string name="home_entry_tuner">Tuner</string>
    <string name="home_entry_tuner_description">Live pitch view</string>
    <string name="home_entry_practice">Practice</string>
    <string name="home_entry_practice_description">Play a sequence of notes</string>
    <string name="home_entry_history">Scores</string>
    <string name="home_entry_history_description">Show past results</string>
    <string name="home_entry_settings">Settings</string>
    <string name="home_entry_settings_description">Change application settings</string>
    <string name="too_high_string">Too high</string>
    <string name="too_low_string">Too low</string>
    <string name="option_title">Options</string>
    <string name="scale_title">Scale</string>
    <string name="radom_checkbox">Random</string>
    <string name="bass_octave">Bass</string>
    <string name="high_octave">High</string>
    <string name="tow_octave">Two</string>
    <string name="start_button">Start</string>
    <string name="new_practice_button">New Session</string>
    <string name="do_better_button">I can do better!</string>
    <string name="welcome_message">Choose your chant of doom.</string>
    <string name="start_message">Session starts with the first note.</string>
    <string name="average_msg">Average</string>
    <string name="off_msg">off</string>
    <string name="last_msg">last</string>
    <string name="find_note_hold_msg">Find the note and hold.</string>
    <string name="we_are_now_msg">Now we are on.</string>
    <string name="timer_msg">Time :</string>
    <string name="dialog_level_new">You have new level : </string>
    <string name="dialog_level_button_update">Update level</string>
    <string name="dialog_level_button_cancel">Stay</string>
    <string name="developer_mode_title">Developer mode</string>
    <string name="developer_mode_msg">Activate the developer mode</string>
    <string name="precision_helper_title">Precision indicator</string>
    <string name="precision_helper_msg">Hide tuner during Practice </string>
    <string name="username_title">Username</string>
    <string name="username_msg">Your username on this application</string>
    <string name="username_default_value">No name</string>
    <string name="level_title">Skill level</string>
    <string name="level_msg">Set you skill level</string>
    <string name="frequency_base_note_title">Tuner frequency</string>
    <string name="frequency_base_note_msg">Adjust value of A</string>
    <string name="note_C">C</string>
    <string name="note_C_s">C#</string>
    <string name="note_D_b">Db</string>
    <string name="note_D">D</string>
    <string name="note_D_s">D#</string>
    <string name="note_E_b">Eb</string>
    <string name="note_E">E</string>
    <string name="note_F">F</string>
    <string name="note_F_s">F#</string>
    <string name="note_G_b">Gb</string>
    <string name="note_G">G</string>
    <string name="note_G_s">G#</string>
    <string name="note_A_b">Ab</string>
    <string name="note_A">A</string>
    <string name="note_A_s">A#</string>
    <string name="note_B_b">Bb</string>
    <string name="note_B">B</string>
    <string name="major_scale">major</string>
    <string name="minor_scale">minor</string>
    <string-array name="baseNoteArray">
        <item>@string/note_C</item>
        <item>@string/note_G</item>
        <item>@string/note_D</item>
        <item>@string/note_A</item>
        <item>@string/note_E</item>
        <item>@string/note_A_b</item>
        <item>@string/note_E_b</item>
        <item>@string/note_F</item>
        <item>@string/note_B_b</item>
    </string-array>
    <string-array name="scaleNoteArray">
        <item>@string/major_scale</item>
        <item>@string/minor_scale</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="notes_title_string">Add new notes</string>
    <string name="notes_btn_string">Save</string>
    <string name="pdf_date_title">Select date to export</string>
    <string name="pdf_msg_error">Error creating PDF document</string>
    <string name="pdf_msg_file_created">PDF file created in </string>
    <string name="privacy_text">
        <![CDATA[
        <!DOCTYPE html><html> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width"> </head> <body><h2>Privacy Policy</h2> <p> Cello Coach Team built the [Cello Coach] app as a Free app. This SERVICE is provided by Cello Coach Team at no cost and is intended for use as is.
        </p> <p>This page is used to inform website visitors regarding my policies with the collection, use, and
        disclosure of Personal Information if anyone decided to use my Service.
        </p> <p>If you choose to use my Service, then you agree to the collection and use of information in relation
        to this policy. The Personal Information that I collect is used for providing and improving the
        Service. I will not use or share your information with anyone except as described
        in this Privacy Policy.
        </p> <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible
        at [Cello Coach] unless otherwise defined in this Privacy Policy.
        </p> <p><strong>Information Collection and Use</strong></p> <p>For a better experience, while using our Service, I may require you to provide us with certain
        personally identifiable information. The information that I request is retained on your device and is not collected by me in any way
        </p> <p>The app does use third party services that may collect information used to identify you.</p> <div><p>Link to privacy policy of third party service providers used by the app</p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>     </ul></div> <p><strong>Log Data</strong></p> <p> I want to inform you that whenever you use my Service, in a case of an
        error in the app I collect data and information (through third party products) on your phone
        called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
        device name, operating system version, the configuration of the app when utilizing my Service,
        the time and date of your use of the Service, and other statistics.
        </p> <p><strong>Cookies</strong></p> <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
        are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
        </p> <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries
        that use “cookies” to collect information and improve their services. You have the option to either
        accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to
        refuse our cookies, you may not be able to use some portions of this Service.
        </p> <p><strong>Service Providers</strong></p> <p> I may employ third-party companies and individuals due to the following reasons:</p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p> I want to inform users of this Service that these third parties have access to your
        Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they
        are obligated not to disclose or use the information for any other purpose.
        </p> <p><strong>Security</strong></p> <p> I value your trust in providing us your Personal Information, thus we are striving
        to use commercially acceptable means of protecting it. But remember that no method of transmission over
        the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee
        its absolute security.
        </p> <p><strong>Links to Other Sites</strong></p> <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed
        to that site. Note that these external sites are not operated by me. Therefore, I strongly
        advise you to review the Privacy Policy of these websites. I have no control over
        and assume no responsibility for the content, privacy policies, or practices of any third-party sites
        or services.
        </p> <p><strong>Children’s Privacy</strong></p> <p>These Services do not address anyone under the age of 13. I do not knowingly collect
        personally identifiable information from children under 13. In the case I discover that a child
        under 13 has provided me with personal information, I immediately delete this from
        our servers. If you are a parent or guardian and you are aware that your child has provided us with personal
        information, please contact me so that I will be able to do necessary actions.
        </p> <p><strong>Changes to This Privacy Policy</strong></p> <p> I may update our Privacy Policy from time to time. Thus, you are advised to review
        this page periodically for any changes. I will notify you of any changes by posting
        the new Privacy Policy on this page. These changes are effective immediately after they are posted on
        this page.
        </p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
        me.
        </p> <p>This privacy policy page was created at <a href="https://privacypolicytemplate.net" target="_blank">privacypolicytemplate.net</a>                    and modified/generated by <a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank">App Privacy Policy Generator</a></p></body></html>
    ]]>
    </string>
    <string name="privacy_accept">Agree</string>
    <string name="privacy_noaccept">Not agree</string>
    <string name="octave_indicate">Octave</string>
</resources>