<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/developer_mode_title"
        android:key="devmode"
        android:summary="@string/developer_mode_msg"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:title="@string/precision_helper_title"
        android:key="indicatormode"
        android:summary="@string/precision_helper_msg"
        android:defaultValue="true"
        />

    <EditTextPreference
        android:title="@string/username_title"
        android:key="USER_NAME"
        android:summary="@string/username_msg"
        android:defaultValue="@string/username_default_value"
        />

    <ListPreference
        android:key="USER_SKILL_LEVEL"
        android:title="@string/level_title"
        android:summary="@string/level_msg"
        android:entries="@array/intro_array_level"
        android:entryValues="@array/intro_array_level"
        />

</PreferenceScreen>