<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Random"
                android:id="@+id/tcRandomSequence"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingEnd="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Seq"
                android:id="@+id/tcNewSeq"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_C"
                android:id="@+id/tcNewCMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_G"
                android:id="@+id/tcNewGMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_D"
                android:id="@+id/tcNewDMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_A"
                android:id="@+id/tcNewAMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_E"
                android:id="@+id/tcNewEMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_A_b"
                android:id="@+id/tcNewAbMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_E_b"
                android:id="@+id/tcNewEbMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_F"
                android:id="@+id/tcNewFMajor"
                android:layout_marginTop="10dp"/>

        <Button
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/note_B_b"
                android:id="@+id/tcNewBbMajor"
                android:layout_marginTop="10dp"/>
</LinearLayout>
